--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   height: 40vmin;
   pointer-events: none;
 }
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Eczar:wght@500&family=Merriweather:wght@700&family=Montserrat:ital,wght@1,200&family=Pacifico&family=Playfair&family=Poppins:wght@200&display=swap");
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
