made page responsive

--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -17,3 +17,8 @@
   padding-top: 40px;
   padding-left: 20px;
 }
+@media screen and (max-width: 500px) {
+  .sidebar {
+    padding: 0px 20px;
+  }
+}
