complete al the functionality and handled error404

--- a/src/Templates/Template1/Template1.css
+++ b/src/Templates/Template1/Template1.css
@@ -7,8 +7,8 @@
 .Paper {
   padding-top: 20px;
 }
-.pdf-container {
-  background-color: whitesmoke;
+.pdf-container1 {
+  background-color: white;
 }
 .header {
   display: flex;
@@ -87,4 +87,10 @@
   position: absolute;
   top: 17vh;
   right: 8%;
+}
+@media screen and (max-width: 400px) {
+  .temp-back {
+    width: 130vw;
+    padding: 10px;
+  }
 }
