--- a/src/Templates/Template3/Template3.css
+++ b/src/Templates/Template3/Template3.css
@@ -1,5 +1,5 @@
 .template-container {
-  background-color: #f2f2f2;
+  background-color: lightblue;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -8,7 +8,7 @@
 }
 
 .Paper {
-  background-color: #fff;
+  background-color: rgb(231, 234, 238);
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -18,12 +18,13 @@
 }
 
 .header-3 {
-  background-color: #ea80f8c4;
-  color: #fff;
+  background-color: pink;
+  color: darkolivegreen;
   padding: 20px;
   border-radius: 10px 10px 0 0;
   display: flex;
   align-items: center;
+  font-weight: bold;
   text-align: left;
 }
 
@@ -45,6 +46,10 @@
 .name3 {
   margin: 0;
   font-size: 24px;
+  letter-spacing: 5px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: rebeccapurple;
 }
 
 .objective3 {
@@ -100,6 +105,12 @@
 
 .skill-div3 {
   margin-bottom: 5px;
+}
+@media screen and (max-width: 400px) {
+  .template-container {
+    width: 130vw;
+    padding: 10px;
+  }
 }
 
 /* Rest of your styles... */
