--- a/src/pages/AboutPage/About.css
+++ b/src/pages/AboutPage/About.css
@@ -1,47 +1,4 @@
 .aboutbox {
-  padding: 25px;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-.heading {
-  padding-left: 20px;
-}
-
-.box-bg {
-  display: flex;
-  gap: 5px;
-  justify-content: space-evenly;
-  padding: 20px;
-  width: 100%;
-}
-.para {
-  width: 50%;
-}
-.box {
-  width: 50%;
-  padding-left: 20rem;
-}
-.footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  background-color: lightslategray;
-  bottom: 0%;
-  width: 100vw;
-}
-.shareoption {
-  display: flex;
-  gap: 20px;
-  margin-top: 20px;
-  justify-content: center;
-}
-.shareoption a {
-  color: rgb(128, 15, 0);
-}
-/* 
-.aboutbox {
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -95,6 +52,7 @@
 
   .box-bg {
     padding: 1.5rem;
+    display: inline;
   }
 
   .shareoption {
@@ -106,4 +64,14 @@
   .heading {
     font-size: 2rem;
   }
-} */
+}
+
+@media screen and (max-width: 400px) {
+  .aboutbox {
+    width: 130vw;
+    padding: 10px;
+  }
+  .footer {
+    width: 130%;
+  }
+}
