--- a/src/pages/DetailPage/Detailpage.css
+++ b/src/pages/DetailPage/Detailpage.css
@@ -1,26 +1,22 @@
 .detailfilling {
   display: grid;
-  grid-template-columns: 1fr 2fr;
   grid-gap: 20px;
-  margin: 60px 120px;
+  grid-template-columns: 1fr 2fr;
+  margin: 25px 0px;
+  padding: 0px 10px;
 }
 
 @media screen and (max-width: 900px) {
   .detailfilling {
-    display: grid;
     grid-template-columns: 0.5fr 3fr;
-    grid-gap: 10px;
-    margin: 60px 0px;
-    align-items: flex-start;
+    margin: 15px 0px; /* Adjust margin as needed */
   }
 }
 
 @media screen and (max-width: 500px) {
   .detailfilling {
-    display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 10px;
-    margin: 60px 0px;
-    align-items: flex-start;
+    margin: 10px 0px; /* Adjust margin as needed */
+    padding: 0px 10px;
   }
 }
