--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 40px;
+  padding: 20px;
 }
 .resume:hover .MuiButtonBase-root.MuiButton-root.buttons-temp {
   visibility: visible;
@@ -13,16 +13,14 @@
 }
 .MuiButtonBase-root.MuiButton-root.buttons-temp {
   position: absolute;
-  bottom: 30%;
   padding-right: 20px;
 
   visibility: hidden;
 }
 @media (max-width: 768px) {
   .MuiButtonBase-root.MuiButton-root.buttons-temp {
-    position: relative;
+    position: absolute;
     padding: 15px;
-    bottom: 20%;
     visibility: hidden;
   }
   .resume {
@@ -31,5 +29,10 @@
   }
   .resume:hover .MuiButtonBase-root.MuiButton-root.buttons-temp {
     visibility: visible;
+  }
+}
+@media screen and (max-width: 400px) {
+  .homepage-bg {
+    width: 130vw;
   }
 }
