--- a/src/Templates/Template3/Template3.css
+++ b/src/Templates/Template3/Template3.css
@@ -1,6 +1,6 @@
-.template-container {
+.template-container3 {
   background-color: lightblue;
-  padding: 20px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,7 +10,6 @@
 .Paper {
   background-color: rgb(231, 234, 238);
   border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   width: 100%;
   max-width: 800px;
@@ -18,7 +17,7 @@
 }
 
 .header-3 {
-  background-color: pink;
+  background-color: rgb(228, 166, 212);
   color: darkolivegreen;
   padding: 20px;
   border-radius: 10px 10px 0 0;
@@ -107,9 +106,8 @@
   margin-bottom: 5px;
 }
 @media screen and (max-width: 400px) {
-  .template-container {
-    width: 130vw;
-    padding: 10px;
+  .Paper {
+    width: 100%;
   }
 }
 
